--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -371,7 +371,7 @@
                                             {{'products.product.sold_out' | t }}
                                         {% endif %}
                                     </span>
-                                    <div class="loading-overlay__spinner hidden"><i class="at at-circle-notch-r at-spin"></i></div>
+                                    <div class="loading-overlay__spinner inline-block hidden ml-2"><i class="at at-circle-notch-r at-spin"></i></div>
                                 </button>
                             </div>
                             {%- if settings.dynamic_btn -%}
