--- a/sections/banner-with-text.liquid
+++ b/sections/banner-with-text.liquid
@@ -17,7 +17,7 @@
           {%- assign img_url = blkSt.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
 
           {% if blkSt.image_mb != blank %}
-          <section class="md:hidden block"> {{ blkSt.image_mb | image_url: width: 980 | image_tag: height: blkSt.bg_img_mb.height, class: 'w-full mt-8', lazyload: true }} </section>
+          <section class="md:hidden block"> {{ blkSt.image_mb | image_url: width: 980 | image_tag: height: 'auto', class: 'w-full mt-8', lazyload: true }} </section>
           {% endif %}
           
           <span class="{% if blkSt.image_mb != blank %}md:block hidden{% endif %} imgWrapper"
