--- a/sections/banner-with-text.liquid
+++ b/sections/banner-with-text.liquid
@@ -38,12 +38,12 @@
        
        
         {% if hbStyle %}
-        <div class="page-width fl f-aic f-col f-row-md">
+        <div class="page-width xl:px-4 px-8 fl f-aic f-col f-row-md">
         {% endif %}
     
         {{ image_layout }}
         <div class="{% unless hbStyle %}fl1{% endunless %}{% if hbStyle %}md:w-2/5 md:mb-8 mb-0 md:mt-0 mt-10{% endif %} feature-row__text {{ blkSt.layout }} wow{% if blkSt.layout == 'right' %} fadeInLeft{% else %} fadeInRight{% endif %}" data-wow-delay="{{delay_time}}ms">
-          <div class="row-text md:{{blkSt.text_align}} {% if hbStyle %}md:text-center !m-0 !p-0{% endif %}">
+          <div class="row-text md:{{blkSt.text_align}} {% if hbStyle %}text-center !m-0 !p-0{% endif %}">
             {% if blkSt.title != blank %}
               <h3 class="{% if hbStyle %}md:!text-4_5xl !text-2_5xl{% endif %} ttlTxt mb{{secSt.tmbm}} mb{{secSt.tmb}}-md" style="--tcl:{{blkSt.tcl}};--tfs:{{secSt.tfs}}px;--tff:var(--{{secSt.tff}});--tfw:{{secSt.tfw}};--tlh:{{secSt.tlh}};">{{ blkSt.title }}</h3>
             {% endif %}
