--- a/sections/image-text.liquid
+++ b/sections/image-text.liquid
@@ -2,7 +2,7 @@
 
 {% if secSt.bg_img != blank %}
   <section section-name="image-text" class="{% render 'section-interva-set' , secSt:secSt %}" >
-    <div class="page-width px-4">
+    <div class="page-width xl:px-4 md:px-8 px-4">
 
       <div class="md:rounded-section rounded-4xl md:flex overflow-hidden relative md:h-auto h-[92vw]" style="background-color:{{secSt.bg_color}};">
         <div class="md:w-3/5 md:opacity-100 opacity-40 md:h-auto h-full" >
