--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -10,7 +10,7 @@
 [section-name = 'logo-slider'] .flickity-page-dots .dot{@apply rounded-none w-4 h-1 pointer-events-none}
 [section-name = 'logo-slider'] .flickity-page-dots .dot.is-selected{@apply w-5}
 
-[section-name = 'store-features'] [tag-name = 'features-header'] .h3{@apply md:text-4_5xl text-2_5xl mb-7}
+[section-name = 'store-features'] [tag-name = 'features-header'] .h3{@apply md:text-4_5xl text-2_5xl md:mb-7 mb-5}
 [section-name = 'store-features'] [tag-name = 'features-header'] p{@apply md:text-xl px-4}
 [section-name = 'store-features'] [tag-name = 'features-ul'] .flickity-page-dots {@apply absolute -bottom-8 w-full}
 [section-name = 'store-features'] [tag-name = 'features-ul'] .flickity-page-dots .dot{@apply h-1 w-6 rounded-none mx-1 p-0 bg-black-600}
@@ -32,17 +32,17 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{@apply !hid
 .footer-bottom [section-name = 'localization'] select{@apply text-white}
 
 [section-name = 'color-slider-full'] div.is-selected [tag-name = 'color-block'] > div{@apply shadow-black-600}
-[section-name = 'color-slider-full'] div.is-selected [tag-name = 'color-block']{@apply border-black-800}
+[section-name = 'color-slider-full'] div.is-selected [tag-name = 'color-block']{@apply border-black-800 }
 
-[section-name = 'multiple-image-text'] .flickity-button{@apply bg-black-700 hover:bg-black-900 md:visible invisible}
+[section-name = 'multiple-image-text'] .flickity-button{@apply bg-black-700 hover:bg-black-900 lg:flex hidden}
 [section-name = 'multiple-image-text'] .flickity-button-icon{@apply fill-white}
-[section-name = 'multiple-image-text'] .flickity-prev-next-button.previous{@apply md:-left-14}
-[section-name = 'multiple-image-text'] .flickity-prev-next-button.next{@apply md:-right-14}
+[section-name = 'multiple-image-text'] .flickity-prev-next-button.previous{@apply xl:-left-14}
+[section-name = 'multiple-image-text'] .flickity-prev-next-button.next{@apply xl:-right-14}
 
 [section-name = 'products-slider-full'] .flickity-button{@apply bg-black-700 hover:bg-black-900}
 [section-name = 'products-slider-full'] .flickity-button-icon{@apply fill-white}
-[section-name = 'products-slider-full'] .flickity-prev-next-button.previous{@apply md:left-12}
-[section-name = 'products-slider-full'] .flickity-prev-next-button.next{@apply md:right-12}
+[section-name = 'products-slider-full'] .flickity-prev-next-button.previous{@apply xl:left-1/5 left-8}
+[section-name = 'products-slider-full'] .flickity-prev-next-button.next{@apply xl:right-1/5 right-8}
 
 [section-name = 'product-tabs-nav'] [tag-name = 'tabs-wrapper'] >a.active{@apply text-white border-solid border-0 md:border-b-4 border-white}
 
@@ -51,15 +51,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{@apply !hid
 .pswp--click-to-zoom.pswp--zoom-allowed .pswp__img{@apply bg-white}
 .zoomImg{@apply !bg-white}
 
-.slideshow-wrapper .hbStyle .flickity-page-dots{@apply md:px-4 pl-8 max-w-page left-1/2 -translate-x-1/2 justify-start lg:bottom-12 md:bottom-8 bottom-6 }
-.slideshow-wrapper .hbStyle .flickity-page-dots .dot{@apply bg-white rounded-none md:w-2 md:h-2 w-4 h-3 transition-all}
+.slideshow-wrapper .hbStyle .flickity-page-dots{@apply md:pl-8 pl-0 max-w-page md:left-1/2 md:-translate-x-1/2 md:justify-start justify-center lg:bottom-12 md:bottom-8 bottom-6 }
+.slideshow-wrapper .hbStyle .flickity-page-dots .dot{@apply bg-white rounded-none md:w-2 h-2 w-4 transition-all}
 .slideshow-wrapper .hbStyle .flickity-page-dots .dot.is-selected{@apply bg-vi md:w-8 w-12}
-
 
 .video-wrap__grippy + .video-wrap__grippy { @apply left-auto right-0 before:left-auto before:right-full before:top-auto before:bottom-0; }
 
+[section-name = 'accordion'] .at-plus-r{@apply bg-black-400}
 
-@media only screen and (max-width:765px) {
+
+@media only screen and (max-width:769px) {
     .pr_thumbs_item {@apply md:w-[18.5%] md:mx-[0.3%] mx-1 w-[5.65rem]}
     .product-single .flickity-button{@apply hidden }
     [flickity-screen='pc']:after {@apply content-none }
@@ -96,8 +97,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{@apply !hid
     .footer-bottom .payment-list__item{@apply !h-auto w-8 mr-2}
     .footer-links .h4.active{@apply text-white font-bold}
     .footer-top .newsletter .wrap-newsletter{@apply max-w-none}
-    #shopify-section-footer [section-name = 'localization'] img{@apply w-4 h-4}
+    #shopify-section-footer [section-name = 'localization'] img{@apply w-5 h-5}
     #shopify-section-footer [section-name = 'localization'] select{@apply text-black-400}
+    #CartCount, .favCount{@apply h-4 min-w-[1rem] text-base leading-none -top-1}
 }
 
 @media only screen and (min-width:765px) {
@@ -144,8 +146,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{@apply !hid
 
     .social-icons .social-icons__link{@apply text-black-400}
     .social-icons .social-icons__link span{@apply hidden}
-    .social-icons .social-icons__link i{@apply md:text-xl text-2xl md:mr-0 mr-4}
-    .social-icons .icon{@apply md:w-5 md:h-5 w-[1.875rem] h-[1.875rem] md:mr-0 mr-4}
+    .social-icons .social-icons__link i{@apply md:text-xl text-1_5xl md:mr-0 mr-4}
+    .social-icons .icon{@apply md:w-5 md:h-5 w-6 h-6 md:mr-0 mr-4}
 
     #siteNav ul.dropdown li a:hover{@apply !bg-transparent}
     .btn-featured{@apply font-normal rounded-full bg-gradient-to-b from-vi-light to-vi-dark border-none  hover:text-white hover:-translate-y-1 hover:scale-95}
