--- a/assets/custom.css
+++ b/assets/custom.css
@@ -43,13 +43,14 @@
 }
 
 [section-name = 'store-features'] [tag-name = 'features-header'] .h3 {
-  margin-bottom:1.75rem;
+  margin-bottom:1.25rem;
   font-size:1.745rem;
   line-height:2.15rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   [section-name = 'store-features'] [tag-name = 'features-header'] .h3 {
+    margin-bottom:1.75rem;
     font-size:2.5rem;
     line-height:3rem;
   }
@@ -60,7 +61,7 @@
   padding-right:1rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   [section-name = 'store-features'] [tag-name = 'features-header'] p {
     font-size:1.25rem;
     line-height:1.75rem;
@@ -149,7 +150,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 }
 
 [section-name = 'multiple-image-text'] .flickity-button {
-  visibility:hidden;
+  display:none;
   --tw-bg-opacity:1;
   background-color:rgb(68 68 68 / var(--tw-bg-opacity));
 }
@@ -159,9 +160,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   background-color:rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   [section-name = 'multiple-image-text'] .flickity-button {
-    visibility:visible;
+    display:flex;
   }
 }
 
@@ -169,7 +170,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   fill:#fff;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1280px) {
   [section-name = 'multiple-image-text'] .flickity-prev-next-button.previous {
     left:-3.5rem;
   }
@@ -193,13 +194,23 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   fill:#fff;
 }
 
-@media (min-width: 768px) {
-  [section-name = 'products-slider-full'] .flickity-prev-next-button.previous {
-    left:3rem;
-  }
+[section-name = 'products-slider-full'] .flickity-prev-next-button.previous {
+  left:2rem;
+}
 
+@media (min-width: 1280px) {
+  [section-name = 'products-slider-full'] .flickity-prev-next-button.previous {
+    left:20%;
+  }
+}
+
+[section-name = 'products-slider-full'] .flickity-prev-next-button.next {
+  right:2rem;
+}
+
+@media (min-width: 1280px) {
   [section-name = 'products-slider-full'] .flickity-prev-next-button.next {
-    right:3rem;
+    right:20%;
   }
 }
 
@@ -212,7 +223,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   [section-name = 'product-tabs-nav'] [tag-name = 'tabs-wrapper'] >a.active {
     border-bottom-width:4px;
   }
@@ -233,20 +244,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 }
 
 .slideshow-wrapper .hbStyle .flickity-page-dots {
-  left:50%;
   bottom:1.5rem;
   max-width:1320px;
-  --tw-translate-x:-50%;
-  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  justify-content:flex-start;
-  padding-left:2rem;
+  justify-content:center;
+  padding-left:0px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .slideshow-wrapper .hbStyle .flickity-page-dots {
+    left:50%;
     bottom:2rem;
-    padding-left:1rem;
-    padding-right:1rem;
+    --tw-translate-x:-50%;
+    transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    justify-content:flex-start;
+    padding-left:2rem;
   }
 }
 
@@ -257,7 +268,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 }
 
 .slideshow-wrapper .hbStyle .flickity-page-dots .dot {
-  height:0.75rem;
+  height:0.5rem;
   width:1rem;
   border-radius:0px;
   --tw-bg-opacity:1;
@@ -267,9 +278,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   transition-duration:150ms;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .slideshow-wrapper .hbStyle .flickity-page-dots .dot {
-    height:0.5rem;
     width:0.5rem;
   }
 }
@@ -280,7 +290,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   background-color:rgb(246 190 0 / var(--tw-bg-opacity));
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .slideshow-wrapper .hbStyle .flickity-page-dots .dot.is-selected {
     width:2rem;
   }
@@ -299,14 +309,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   bottom:0px;
 }
 
-@media only screen and (max-width:765px) {
+[section-name = 'accordion'] .at-plus-r {
+  --tw-bg-opacity:1;
+  background-color:rgb(170 170 170 / var(--tw-bg-opacity));
+}
+
+@media only screen and (max-width:769px) {
   .pr_thumbs_item {
     margin-left:0.25rem;
     margin-right:0.25rem;
     width:5.65rem;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 769px) {
     .pr_thumbs_item {
       margin-left:0.3%;
       margin-right:0.3%;
@@ -443,13 +458,22 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   }
 
   #shopify-section-footer [section-name = 'localization'] img {
-    height:1rem;
-    width:1rem;
+    height:1.25rem;
+    width:1.25rem;
   }
 
   #shopify-section-footer [section-name = 'localization'] select {
     --tw-text-opacity:1;
     color:rgb(170 170 170 / var(--tw-text-opacity));
+  }
+
+  #CartCount, .favCount {
+    top:-0.25rem;
+    height:1rem;
+    min-width:1rem;
+    font-size:1rem;
+    line-height:1.5rem;
+    line-height:1;
   }
 }
 
@@ -591,9 +615,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .container {
-    max-width:768px;
+    max-width:769px;
   }
 }
 
@@ -636,11 +660,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .social-icons .social-icons__link i {
   margin-right:1rem;
-  font-size:1.5rem;
-  line-height:2rem;
+  font-size:1.375rem;
+  line-height:1.775rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .social-icons .social-icons__link i {
     margin-right:0px;
     font-size:1.25rem;
@@ -650,11 +674,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .social-icons .icon {
   margin-right:1rem;
-  height:1.875rem;
-  width:1.875rem;
+  height:1.5rem;
+  width:1.5rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .social-icons .icon {
     margin-right:0px;
     height:1.25rem;
@@ -794,10 +818,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   top:0px;
 }
 
-.top-1\/2 {
-  top:50%;
-}
-
 .top-1\/3 {
   top:33.333333%;
 }
@@ -844,10 +864,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .order-5 {
   order:5;
-}
-
-.order-1 {
-  order:1;
 }
 
 .\!m-0 {
@@ -963,6 +979,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .mr-8 {
   margin-right:2rem;
+}
+
+.mt-0 {
+  margin-top:0px;
 }
 
 .mt-10 {
@@ -1089,10 +1109,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:50vw;
 }
 
-.h-\[90vw\] {
-  height:90vw;
-}
-
 .h-\[92vw\] {
   height:92vw;
 }
@@ -1214,11 +1230,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-1\/2 {
-  --tw-translate-y:-50%;
-  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .rotate-180 {
   --tw-rotate:180deg;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1324,6 +1335,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   border-width:0px;
 }
 
+.border-2 {
+  border-width:2px;
+}
+
 .border-b {
   border-bottom-width:1px;
 }
@@ -1365,11 +1380,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .\!bg-transparent {
   background-color:transparent !important;
-}
-
-.bg-black-400 {
-  --tw-bg-opacity:1;
-  background-color:rgb(170 170 170 / var(--tw-bg-opacity));
 }
 
 .bg-black-700 {
@@ -1474,6 +1484,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding:0px;
 }
 
+.p-1 {
+  padding:0.25rem;
+}
+
 .p-2 {
   padding:0.5rem;
 }
@@ -1514,6 +1528,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-bottom:0.5rem !important;
 }
 
+.px-0 {
+  padding-left:0px;
+  padding-right:0px;
+}
+
 .px-2 {
   padding-left:0.5rem;
   padding-right:0.5rem;
@@ -1544,6 +1563,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-right:1.75rem;
 }
 
+.px-8 {
+  padding-left:2rem;
+  padding-right:2rem;
+}
+
 .py-1 {
   padding-top:0.25rem;
   padding-bottom:0.25rem;
@@ -1567,6 +1591,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .py-5 {
   padding-top:1.25rem;
   padding-bottom:1.25rem;
+}
+
+.py-8 {
+  padding-top:2rem;
+  padding-bottom:2rem;
 }
 
 .pb-0 {
@@ -1641,10 +1670,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-top:3rem;
 }
 
-.pt-14 {
-  padding-top:3.5rem;
-}
-
 .pt-2 {
   padding-top:0.5rem;
 }
@@ -1687,11 +1712,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .\!text-sm {
   font-size:0.875rem !important;
   line-height:1.25rem !important;
-}
-
-.\!text-xxs {
-  font-size:0.65rem !important;
-  line-height:0.8rem !important;
 }
 
 .text-1_5xl {
@@ -1775,8 +1795,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   font-style:italic;
 }
 
-.\!leading-\[90\%\] {
-  line-height:90% !important;
+.\!leading-\[87\%\] {
+  line-height:87% !important;
 }
 
 .leading-6 {
@@ -1852,6 +1872,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg {
+  --tw-shadow:0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored:0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-none {
   --tw-shadow:0 0 #0000;
   --tw-shadow-colored:0 0 #0000;
@@ -1861,12 +1887,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .shadow-sm {
   --tw-shadow:0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl {
-  --tw-shadow:0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored:0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1932,7 +1952,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .md\:btn-contrast {
     border-radius:9999px;
     --tw-border-opacity:1;
@@ -2065,7 +2085,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   opacity:0.9;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .md\:static {
     position:static;
   }
@@ -2082,12 +2102,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     left:1.5rem;
   }
 
-  .md\:order-2 {
-    order:2;
-  }
-
   .md\:order-1 {
     order:1;
+  }
+
+  .md\:order-2 {
+    order:2;
   }
 
   .md\:m-0 {
@@ -2210,16 +2230,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-top:5rem;
   }
 
+  .md\:mt-4 {
+    margin-top:1rem;
+  }
+
   .md\:mt-8 {
     margin-top:2rem;
   }
 
-  .md\:mt-\[15\%\] {
-    margin-top:15%;
+  .md\:mt-\[12\%\] {
+    margin-top:12%;
   }
 
-  .md\:mt-\[22\%\] {
-    margin-top:22%;
+  .md\:mt-\[15\%\] {
+    margin-top:15%;
   }
 
   .md\:mt-\[28\%\] {
@@ -2411,6 +2435,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding:3rem;
   }
 
+  .md\:p-2 {
+    padding:0.5rem;
+  }
+
   .md\:\!px-7 {
     padding-left:1.75rem !important;
     padding-right:1.75rem !important;
@@ -2541,10 +2569,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     text-align:left;
   }
 
-  .md\:text-center {
-    text-align:center;
-  }
-
   .md\:\!text-4_5xl {
     font-size:2.5rem !important;
     line-height:3rem !important;
@@ -2587,10 +2611,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:text-\[1\.25rem\] {
     font-size:1.25rem;
-  }
-
-  .md\:text-\[2\.625rem\] {
-    font-size:2.625rem;
   }
 
   .md\:text-base {
@@ -2640,12 +2660,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
   }
 
-  .md\:shadow {
-    --tw-shadow:0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored:0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-    box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
   .md\:transition-all {
     transition-property:all;
     transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
@@ -2684,8 +2698,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-bottom:8%;
   }
 
-  .lg\:mt-12 {
-    margin-top:3rem;
+  .lg\:mt-10 {
+    margin-top:2.5rem;
   }
 
   .lg\:mt-24 {
@@ -2757,6 +2771,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 }
 
 @media (min-width: 1280px) {
+  .xl\:absolute {
+    position:absolute;
+  }
+
+  .xl\:-ml-\[12\%\] {
+    margin-left:-12%;
+  }
+
   .xl\:mb-12 {
     margin-bottom:3rem;
   }
@@ -2765,12 +2787,17 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-bottom:12%;
   }
 
-  .xl\:mt-0 {
-    margin-top:0px;
+  .xl\:mt-14 {
+    margin-top:3.5rem;
   }
 
   .xl\:w-1\/7 {
     width:14.285%;
+  }
+
+  .xl\:px-4 {
+    padding-left:1rem;
+    padding-right:1rem;
   }
 
   .xl\:pb-18 {
@@ -2795,6 +2822,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .xl\:pt-24 {
     padding-top:6rem;
+  }
+
+  .xl\:text-\[2\.625rem\] {
+    font-size:2.625rem;
   }
 }
 
