--- a/sections/products-slider-full.liquid
+++ b/sections/products-slider-full.liquid
@@ -9,15 +9,17 @@
     <div class="absolute opacity-60 top-8 left-1/2 -translate-x-1/2 lg:w-[33vw] lg:h-[33vw] w-1/2 h-[50vw] rounded-full shadow-[0px -10px 5px 3px #ededed] bg-gradient-to-b via-white from-white to-transparent"></div>
     <div class="relative" 
     flickity-screen='pc'
-    data-flickity='{"wrapAround": "true","draggable": true,"selectedAttraction": 0.01,"friction": 0.15, "imagesLoaded": true, "watchCSS":true }'>
+    data-flickity='{"wrapAround": "true","draggable": true,"selectedAttraction": 0.01,"friction": 0.15, "imagesLoaded": true, "watchCSS":true }'
+    >
       {% for block in section.blocks %}
       
-      <div class="page-width md:mb-0 {% unless forloop.index == 2%}mb-14{% endunless %} md:opacity-30 md:transition-opacity md:duration-700 md:delay-300 {% if forloop.index > 2%} hidden md:block {% endif %}" >
+      <div class="page-width md:mb-0 {% unless forloop.index == 2 %}mb-14{% endunless %} md:opacity-30 md:transition-opacity md:duration-700 md:delay-300 {% if forloop.index > 2 %} hidden md:block {% endif %}" >
         {%- assign product = block.settings.product -%}
         {% if product.title.size > 0 %}
         
         <div class="md:!bg-none md:rounded-none rounded-4xl relative" style="background-image: linear-gradient({{secSt.bg_color}}, #fff);">
-          <div tag-name="product-info" class="md:absolute static md:mb-0 mb-8 left-4 top-4 md:opacity-0 md:transition-opacity md:duration-300 md:delay-700 w-full z-20 md:text-left text-center">
+          <div tag-name="product-info"
+            class="xl:-ml-[12%] xl:absolute static md:mb-0 mb-8 left-4 top-4 md:opacity-0 md:transition-opacity md:duration-300 md:delay-700 w-full z-20 md:text-left text-center">
             <div class="md:pt-0 pt-11">
               <h2 class="lg:text-3_5xl md:text-3xl text-2xl mb-1">{{ product.title }}</h2>
               <p class="md:text-1_5xl text-lg xl:mb-12 lg:mb-8 md:mb-4 mb-2 text-black-600">{{block.settings.info}}</p>
@@ -38,7 +40,7 @@
             {% else %}
             {% assign media = product.featured_image %}
             {% endif %}
-            {% assign imgWapClass = 'md:scale-90 md:transition-all md:duration-700 md:delay-300 xl:mt-0 lg:mt-12 md:mt-20' %}
+            {% assign imgWapClass = 'md:scale-90 md:transition-all md:duration-700 md:delay-300 mt-0' %}
             <div class='{{imgWapClass}}' tag-name="product-img">
               {{ media | image_url: width: 1920 | image_tag: width: media.width, height: media.height, lazyload: true, class:'h-auto z-10 relative' }}
 
