--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -97,8 +97,8 @@
                                 --bgm:transparent;--pdm:0;--frcl:transparent;--frmm:none;
                             {% endif %}
                         {%- endcapture -%}
-                        <div class="ss_txt-wrap w_100 h_100" {% if secSt.isbox or secSt.isboxm %} style="--ibg:{{ secSt.obg | color_modify: 'alpha', secSt.oopt }};--brad:{{secSt.brad}}px;"{% endif %}>
-                            <div class="page-width fl h_100 {{ blkSt.txtpos }} {{ blkSt.txtposm }}" style="max-width:{{blkSt.contwd}}px;{{bxStyle}}">
+                        <div class="ss_txt-wrap px-0 w_100 h_100" {% if secSt.isbox or secSt.isboxm %} style="--ibg:{{ secSt.obg | color_modify: 'alpha', secSt.oopt }};--brad:{{secSt.brad}}px;"{% endif %}>
+                            <div class="page-width xl:px-4 px-8 fl h_100 {{ blkSt.txtpos }} {{ blkSt.txtposm }}" style="max-width:{{blkSt.contwd}}px;{{bxStyle}}">
                                 <div class="ss_txt md:pl-0  2k:mb-[20%] 2xl:mb-[16%] xl:mb-[12%] lg:mb-[8%] md:mb-[6%] md:mt-0 mt-20{% if blkSt.text-left %} tl{% else %} tc{% endif %}{% if section.settings.txtanimation %} anim {{ section.settings.anim }}{% endif %}">
                                     {% if blkSt.hd1 != blank %}
                                         <p class="stxt hd1 {{secSt.pff}}" style="--cl:{{blkSt.pcl}};--fs:{{secSt.pfs}}px;--fsm:1.07rem;--fw:{{secSt.pfw}};--lh:{{secSt.plh}};--mb:{{secSt.pmb}}px;--mbm:0">{{ blkSt.hd1 }}</p>
@@ -118,8 +118,8 @@
                                         {% if blkSt.btn != blank %}<div class="btnWrap"><a class="btn {{secSt.btn-sizem}} {{secSt.btn-size}} {{blkSt.btn-style}}" href="{{ blkSt.link }}">{{blkSt.btn}}</a></div>{% endif %}
                                     {% else %}
                                         {% if blkSt.btn != blank %}
-                                        <div class="btnWrap mt-14">
-                                            <span class="btn btn-featured md:!text-lg !text-xxs md:!py-3 md:!px-7 !py-2 !px-4 m-0 {{secSt.btn-sizem}} {{secSt.btn-size}} {{blkSt.btn-style}}" >{{blkSt.btn}}</span>
+                                        <div class="btnWrap xl:mt-14 lg:mt-10 md:mt-4 mt-14 ">
+                                            <span class="btn btn-featured md:!text-lg !text-sm md:!py-3 md:!px-7 !py-2 !px-4 m-0 {{secSt.btn-sizem}} {{secSt.btn-size}} {{blkSt.btn-style}}" >{{blkSt.btn}}</span>
                                         </div>
                                         {% endif %}
                                     {% endif %}            
