--- a/sections/store-features.liquid
+++ b/sections/store-features.liquid
@@ -12,7 +12,7 @@
       </section>
 
 
-        <ul {% if hbStyle %}tag-name="features-ul" {% endif %}class="md:bg-transparent rounded-4xl md:h-auto h-[90vw] md:pt-0 pt-14 bg-black-800 store-info fl f-jcsb sec{{section.id}} {{ secSt.style}}"
+        <ul {% if hbStyle %}tag-name="features-ul" {% endif %}class="md:bg-transparent rounded-4xl md:py-0 py-8 bg-black-800 store-info fl f-jcsb sec{{section.id}} {{ secSt.style}}"
             data-flickity='{"pageDots": true, "prevNextButtons": false, "wrapAround":true, "watchCSS":true }' flickity-screen='mobile'
             style="--cl:{{secSt.cl}};--tcl:{{secSt.tcl}};--tfs:{{secSt.tfs}}px;--tsm:{{secSt.tfsm | divided_by: 100.0 }}rem;--tff:var(--ft1);--tfw:{{secSt.tfw}};--lh:{{secSt.tlh}};
                     --icl:{{secSt.icons_clr}};--isz:{{secSt.isz}}px;--bd:{{secSt.border_sep}}">
