--- a/snippets/product-giveaways.liquid
+++ b/snippets/product-giveaways.liquid
@@ -1,7 +1,7 @@
 {%- capture productTabs -%}
-<div section-name="product-giveaways" class="md:mb-4 mb-8 rounded-md md:shadow shadow-xl overflow-hidden">
+<div section-name="product-giveaways" class="md:mb-4 mb-8 rounded-md shadow-lg overflow-hidden">
   <div class="flex p-4">
-    {{ block.Image | image_url: width: 200 | image_tag: width: nil, loading: 'lazy', class: "max-w-1/3" }}
+    {{ block.Image | image_url: width: 200 | image_tag: width: nil, loading: 'lazy', class: "max-w-1/3 h-auto" }}
     <div class="ml-4">
       <p class="text-base font-extrabold mb-0">{{ block.title }}</p>
       <p class="md:text-sm text-[.925rem] line-through mb-0 text-black-600">{{ block.price | money }}</p>
