--- a/assets/custom.css
+++ b/assets/custom.css
@@ -660,8 +660,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .social-icons .social-icons__link i {
   margin-right:1rem;
-  font-size:1.375rem;
-  line-height:1.775rem;
+  font-size:1.5rem;
+  line-height:2rem;
 }
 
 @media (min-width: 769px) {
@@ -674,8 +674,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .social-icons .icon {
   margin-right:1rem;
-  height:1.5rem;
-  width:1.5rem;
+  height:1.875rem;
+  width:1.875rem;
 }
 
 @media (min-width: 769px) {
@@ -832,6 +832,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .top-8 {
   top:2rem;
+}
+
+.top-1\/2 {
+  top:50%;
 }
 
 .z-10 {
@@ -1125,6 +1129,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:1px;
 }
 
+.h-\[90vw\] {
+  height:90vw;
+}
+
 .max-h-36 {
   max-height:9rem;
 }
@@ -1227,6 +1235,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .-translate-x-1\/2 {
   --tw-translate-x:-50%;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y:-50%;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1415,6 +1428,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .bg-white {
   --tw-bg-opacity:1;
   background-color:rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black-400 {
+  --tw-bg-opacity:1;
+  background-color:rgb(170 170 170 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1686,6 +1704,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-top:1.25rem;
 }
 
+.pt-14 {
+  padding-top:3.5rem;
+}
+
 .text-left {
   text-align:left;
 }
@@ -1763,6 +1785,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   line-height:1rem;
 }
 
+.\!text-xxs {
+  font-size:0.65rem !important;
+  line-height:0.8rem !important;
+}
+
 .\!font-semibold {
   font-weight:600 !important;
 }
@@ -1805,6 +1832,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .leading-tight {
   line-height:1.25;
+}
+
+.\!leading-\[90\%\] {
+  line-height:90% !important;
 }
 
 .\!text-white {
@@ -1887,6 +1918,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .shadow-sm {
   --tw-shadow:0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow:0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored:0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2250,6 +2287,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-top:28%;
   }
 
+  .md\:mt-\[22\%\] {
+    margin-top:22%;
+  }
+
   .md\:block {
     display:block;
   }
@@ -2569,6 +2610,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     text-align:left;
   }
 
+  .md\:text-center {
+    text-align:center;
+  }
+
   .md\:\!text-4_5xl {
     font-size:2.5rem !important;
     line-height:3rem !important;
@@ -2633,6 +2678,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     line-height:1.75rem;
   }
 
+  .md\:text-\[2\.625rem\] {
+    font-size:2.625rem;
+  }
+
   .md\:\!leading-\[95\%\] {
     line-height:95% !important;
   }
@@ -2658,6 +2707,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     --tw-shadow:inset 0px 0px 0px 3.5px white !important;
     --tw-shadow-colored:inset 0px 0px 0px 3.5px var(--tw-shadow-color) !important;
     box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+  }
+
+  .md\:shadow {
+    --tw-shadow:0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored:0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+    box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
   .md\:transition-all {
@@ -2704,6 +2759,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .lg\:mt-24 {
     margin-top:6rem;
+  }
+
+  .lg\:mt-12 {
+    margin-top:3rem;
   }
 
   .lg\:h-\[33vw\] {
@@ -2789,6 +2848,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .xl\:mt-14 {
     margin-top:3.5rem;
+  }
+
+  .xl\:mt-0 {
+    margin-top:0px;
   }
 
   .xl\:w-1\/7 {
